--- a/src/assets/sass/base/base.scss
+++ b/src/assets/sass/base/base.scss
@@ -1,6 +1,21 @@
 /**/
 :root {
     @extend %font__content !optional;
+    @include from-desktop {
+        --header-padding: #{$header-padding-responsive-top-and-bottom1} #{$header-padding-responsive-left-and-right1};
+        --header-padding-top: #{$header-padding-responsive-top-and-bottom1};
+        --color: #{$color-test1};
+    }
+    @include tablette-only {
+        --header-padding: #{$header-padding-responsive-top-and-bottom2} #{$header-padding-responsive-left-and-right2};
+        --header-padding-top: #{$header-padding-responsive-top-and-bottom2};
+        --color: #{$color-test2};
+    }
+    @include mobile-only {
+        --header-padding: #{$header-padding-responsive-top-and-bottom3} #{$header-padding-responsive-left-and-right3};
+        --header-padding-top: #{$header-padding-responsive-top-and-bottom3};
+        --color: #{$color-test3};
+    }
 }
 
 h1,
