--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -1,1 +1,82 @@
 /**/
+
+.profile {
+    position: relative;
+    &__avatar--in-menu {
+        width: 35px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: filter 40ms ease-in;
+        margin-right: 10px;
+    }
+    &__menu {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.832);
+        color: white;
+        transform: translateX(calc(-100% + 35px))
+            translateY(calc(var(--header-padding-top) - 35px / 2));
+
+        width: 250px;
+        line-height: 0;
+        font-size: 13px;
+        font-weight: 400;
+        &::before {
+            content: '';
+            position: absolute;
+            background-color: transparent;
+            z-index: 100;
+            height: calc(var(--header-padding-top));
+            translate: 0 calc(var(--header-padding-top) * -1);
+            width: 250px;
+            user-select: none;
+            // pointer-events: none;
+        }
+        &-list {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            &-element {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                margin: 5px 20px;
+                cursor: pointer;
+                &:hover {
+                    p {
+                        text-decoration: underline;
+                    }
+                }
+                .profile__menu-icon-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 35px;
+                    height: 35px;
+                    margin-right: 10px;
+                    .profile__menu-icon {
+                        font-size: 25px;
+                    }
+                }
+            }
+        }
+        &-button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 5px 20px 15px 20px;
+            height: 35px;
+            cursor: pointer;
+            &:hover {
+                p {
+                    text-decoration: underline;
+                }
+            }
+        }
+        &-divider {
+            height: 2px;
+            background-color: grey;
+            margin: 10px;
+        }
+    }
+}
