--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -56,3 +56,9 @@ $header-padding-responsive-top-and-bottom2: clamp(20px, 2vw, 50px);
 $header-padding-responsive-top-and-bottom3: clamp(20px, 2.5vw, 50px);
 
 $header-elements-margin1: 0 7px;
+
+// -----colors test-----
+
+$color-test1: red;
+$color-test2: blue;
+$color-test3: green;
