changed header gaps & profile avatar z-index

--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -56,6 +56,7 @@ $header-padding-responsive-top-and-bottom2: clamp(20px, 2vw, 50px);
 $header-padding-responsive-top-and-bottom3: clamp(20px, 2.5vw, 50px);
 
 $header-elements-margin1: 0 7px;
+$header-elements-margin-left-and-right1: 7px;
 
 // -----colors test-----
 
