--- a/src/assets/sass/layouts/headers.scss
+++ b/src/assets/sass/layouts/headers.scss
@@ -1,7 +1,6 @@
 /**/
 
 header.header {
-    // position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -9,29 +8,14 @@ header.header {
     background-color: rgb(42, 42, 42);
     color: white;
     padding: var(--header-padding);
-    // &::after {
-    //     content: '';
-    //     z-index: 100;
-    //     position: absolute;
-    //     background-color: green;
-    //     width: 100%;
-    //     height: calc(var(--header-padding-top) * 2);
-    //     top: calc(var(--header-padding-top) * 2);
-    //     left: 0;
-    // }
 
     height: 0;
     .header__logo-container {
-        // position: fixed;
         margin-right: $logo-margin-right-responsive-header1;
-        // background-color: pink;
-        // height: auto;
 
         a.header__logo-link {
             background-color: blue;
             img.header__logo {
-                // background-color: green;
-                // width: 100%;
                 object-fit: cover;
                 aspect-ratio: 16 / 9;
                 @include from-desktop {
@@ -58,11 +42,12 @@ header.header {
             justify-content: flex-end;
         }
         .profile__avatar {
+            position: relative;
+            z-index: 10;
             width: 35px;
             border-radius: 5px;
             cursor: pointer;
             transition: filter 40ms ease-in;
-
             &:hover {
                 filter: brightness(1.2);
             }
@@ -77,6 +62,7 @@ header.header {
             padding: 0;
             margin: 0;
             width: fit-content;
+            gap: calc($header-elements-margin-left-and-right1 * 2);
 
             li.header__menu-navlinks-item {
                 @include from-desktop {
@@ -88,7 +74,6 @@ header.header {
                 @include mobile-only {
                     font-size: $font-size-responsive-header3;
                 }
-                margin-right: $font-margin-right-responsive-header1;
             }
             @include mobile-and-tablette {
                 display: none;
@@ -100,24 +85,17 @@ header.header {
             justify-content: flex-end;
             align-items: center;
             white-space: nowrap;
+            gap: calc($header-elements-margin-left-and-right1 * 2);
             a.header__icon {
                 width: 20px;
-                margin: $header-elements-margin1;
             }
             h2 {
-                margin: $header-elements-margin1;
-
                 @include from-desktop {
                     font-size: $font-size-responsive-header1;
                 }
                 @include mobile-and-tablette {
                     display: none;
                 }
-            }
-            .notification-bell {
-                margin: $header-elements-margin1;
-
-                // width: 20px;
             }
         }
     }
