--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -51,9 +51,9 @@ $logo-margin-right-responsive-header1: clamp(10px, 3vw, 30px);
 $header-padding-responsive-left-and-right1: clamp(10px, 4vw, 50px);
 $header-padding-responsive-left-and-right2: clamp(15px, 4vw, 50px);
 $header-padding-responsive-left-and-right3: clamp(15px, 4vw, 50px);
-$header-padding-responsive-top-and-bottom1: clamp(20px, 2.5vw, 50px);
-$header-padding-responsive-top-and-bottom2: clamp(20px, 2vw, 50px);
-$header-padding-responsive-top-and-bottom3: clamp(20px, 2.5vw, 50px);
+$header-padding-responsive-top-and-bottom1: clamp(35px, 2.5vw, 50px);
+$header-padding-responsive-top-and-bottom2: clamp(25px, 2vw, 50px);
+$header-padding-responsive-top-and-bottom3: clamp(25px, 2.5vw, 50px);
 
 $header-elements-margin1: 0 7px;
 $header-elements-margin-left-and-right1: 7px;
@@ -63,3 +63,7 @@ $header-elements-margin-left-and-right1: 7px;
 $color-test1: red;
 $color-test2: blue;
 $color-test3: green;
+
+// -----Icons-----
+
+$icon-size-1: 1rem;
