--- a/src/assets/sass/layouts/headers.scss
+++ b/src/assets/sass/layouts/headers.scss
@@ -38,9 +38,9 @@ header.header {
         align-items: center;
         white-space: nowrap;
         width: 100%;
-        @include mobile-and-tablette {
-            justify-content: flex-end;
-        }
+        // @include mobile-and-tablette {
+        //     justify-content: flex-end;
+        // }
         .profile__avatar-container {
             position: relative;
             display: flex;
@@ -63,7 +63,25 @@ header.header {
                 }
             }
         }
-
+        .responsive-menu__button-container {
+            position: relative;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: calc($header-elements-margin-left-and-right1);
+            cursor: pointer;
+            z-index: 10;
+            width: 3.5rem;
+            @include from-desktop {
+                font-size: $font-size-responsive-header1;
+            }
+            @include tablette-only {
+                font-size: $font-size-responsive-header2;
+            }
+            @include mobile-only {
+                font-size: $font-size-responsive-header3;
+            }
+        }
         ul.header__menu-navlinks-list {
             display: flex;
             flex-direction: row;
@@ -74,7 +92,6 @@ header.header {
             margin: 0;
             width: fit-content;
             gap: calc($header-elements-margin-left-and-right1 * 2);
-
             li.header__menu-navlinks-item {
                 @include from-desktop {
                     font-size: $font-size-responsive-header1;
@@ -86,9 +103,9 @@ header.header {
                     font-size: $font-size-responsive-header3;
                 }
             }
-            @include mobile-and-tablette {
-                display: none;
-            }
+            // @include mobile-and-tablette {
+            //     display: none;
+            // }
         }
         .header__right-part {
             display: flex;
