--- a/src/assets/sass/components/buttons.scss
+++ b/src/assets/sass/components/buttons.scss
@@ -1,1 +1,31 @@
 /**/
+%cta {
+    display: flex;
+    justify-content: space-evenly;
+    white-space: nowrap;
+    align-items: center;
+    gap: 1rem;
+    border: none;
+    padding: 0.6rem 1.5rem;
+    font-size: 1.05rem;
+    font-weight: 600;
+    border-radius: 5px;
+    position: relative;
+    img {
+        height: 2rem;
+    }
+}
+.cta-primary,
+.cta-secondary {
+    @extend %cta;
+}
+
+.cta-primary {
+    background-color: white;
+    color: black;
+}
+
+.cta-secondary {
+    background-color: rgba(109, 109, 110, 0.7);
+    color: white;
+}
