--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -30,6 +30,8 @@ $shadow0_: 8px 25px 45px -0px rgba(94, 94, 94, 1);
 $shadow1: 8px 8px 45px -12px rgba(94, 94, 94, 0.62);
 $shadow2: 0px 5px 30px -10px rgb(94 94 94 / 62%);
 
+$shadow-text-1: 2px 2px 4px rgba(0, 0, 0, 0.45);
+
 // -----Fonts-----
 
 $font-size-responsive-header1: clamp(0.6rem, 0.9vw, 2rem);
