make header sticky & add loading screen*

--- a/src/assets/sass/base/base.scss
+++ b/src/assets/sass/base/base.scss
@@ -16,6 +16,7 @@
         --header-padding-top: #{$header-padding-responsive-top-and-bottom3};
         --color: #{$color-test3};
     }
+    user-select: none;
 }
 
 h1,
