--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -292,38 +292,42 @@
             cursor: pointer;
             margin: 0;
             > .notification__image-container {
-                width: 4.5rem;
                 position: relative;
                 border-radius: 0.25rem;
-                box-shadow: 0.5px 0.5px 10px rgb(0 0 0 / 0.15);
                 margin-right: 0.6rem;
+                height: 60%;
+                width: 30%;
+                aspect-ratio: 16 / 9;
+
                 > img {
-                    aspect-ratio: 3 / 2;
+                    // aspect-ratio: 16 / 9;
                     border-radius: 0.25rem;
+                    height: 100%;
+                    box-shadow: $shadow-box-1;
                 }
                 &::before {
                     content: '';
                     position: absolute;
-                    background-color: rgb(196, 196, 196);
+                    background-color: #dbdbd7;
                     top: 0.2rem;
                     left: 0.2rem;
                     width: 100%;
                     height: 100%;
                     z-index: -1;
                     border-radius: 0.25rem;
-                    box-shadow: 0.5px 0.5px 10px rgb(0 0 0 / 0.15);
+                    box-shadow: $shadow-box-1;
                 }
                 &::after {
                     content: '';
                     position: absolute;
-                    background-color: rgb(196, 196, 196);
+                    background-color: #c2c2be;
                     top: 0.4rem;
                     left: 0.4rem;
                     width: 100%;
                     height: 100%;
                     z-index: -2;
                     border-radius: 0.25rem;
-                    box-shadow: 0.5px 0.5px 10px rgb(0 0 0 / 0.15);
+                    box-shadow: $shadow-box-1;
                 }
             }
             > .notification__content {
