--- a/src/assets/sass/components/loaders.scss
+++ b/src/assets/sass/components/loaders.scss
@@ -1,1 +1,89 @@
 /**/
+@keyframes loading-animation {
+    0% {
+        transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes appearing-animation {
+    0% {
+        transform: scale(1.4);
+        filter: opacity(0.8);
+    }
+    100% {
+        transform: scale(1);
+        filter: opacity(1);
+    }
+}
+
+.loading-screen {
+    position: relative;
+    background: #141414;
+    min-height: 300px;
+    color: #e50914;
+    display: table;
+    width: 100%;
+    height: 100vh;
+
+    .netflix-avatar {
+        position: absolute;
+        width: 4rem;
+        height: 4rem;
+        top: calc(50% - 4rem / 2);
+        left: calc(50% - 4rem / 2);
+        z-index: 10;
+        translate: 0 (-5rem);
+        animation: appearing-animation 800ms forwards;
+        animation-timing-function: ease-in-out;
+    }
+    .loading {
+        display: table-cell;
+        width: 100%;
+        vertical-align: middle;
+        translate: 0 (-5rem);
+        animation: appearing-animation 800ms forwards;
+        animation-timing-function: ease-in-out;
+        .bulletouter {
+            animation: loading-animation 1s infinite;
+            animation-timing-function: linear;
+            animation-direction: reverse;
+            width: 200px;
+            height: 200px;
+            background: #e50914;
+            border-radius: 50%;
+            margin: 0 auto;
+            .bulletinner {
+                position: relative;
+                left: -5px;
+                width: 190px;
+                height: 190px;
+                background: #141414;
+                border-radius: 50%;
+                margin: 0 auto;
+            }
+            .mask {
+                position: relative;
+                left: -50px;
+                top: -50px;
+                width: 300px;
+                height: 100px;
+                background: #141414;
+
+                transform: rotate(45deg);
+            }
+            .dot {
+                position: relative;
+                left: 151px;
+                top: -122px;
+                width: 13px;
+                height: 13px;
+                background: #e50914;
+                border-radius: 50%;
+                transform: scaleX(1.03) scaleY(0.98);
+            }
+        }
+    }
+}
