--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -30,6 +30,8 @@ $shadow0_: 8px 25px 45px -0px rgba(94, 94, 94, 1);
 $shadow1: 8px 8px 45px -12px rgba(94, 94, 94, 0.62);
 $shadow2: 0px 5px 30px -10px rgb(94 94 94 / 62%);
 
+$shadow-box-1: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+
 $shadow-text-1: 2px 2px 4px rgba(0, 0, 0, 0.45);
 
 // -----Fonts-----
@@ -37,6 +39,10 @@ $shadow-text-1: 2px 2px 4px rgba(0, 0, 0, 0.45);
 $font-size-responsive-header1: clamp(0.6rem, 0.9vw, 2rem);
 $font-size-responsive-header2: clamp(0.5rem, 1vw, 0.8rem);
 $font-size-responsive-header3: clamp(0.3rem, 1.5vw, 0.7rem);
+
+$font-size-responsive-hero1: clamp(1.2rem, 4vw, 4rem);
+$font-size-responsive-hero2: clamp(0.6rem, 1.5vw, 1.1rem);
+$font-size-responsive-hero3: clamp(0.6rem, 1.5vw, 1.2rem);
 
 $font-margin-right-responsive-header1: clamp(10px, 1.3vw, 20px);
 
@@ -59,6 +65,16 @@ $header-padding-responsive-top-and-bottom3: clamp(25px, 2.5vw, 50px);
 
 $header-elements-margin1: 0 7px;
 $header-elements-margin-left-and-right1: 7px;
+
+// -----Hero-----
+
+$gap-responsive-hero1: clamp(0.5rem, 2vw, 1.5rem);
+$padding-responsive-cta1: clamp(0.5rem, 3vw, 1.5rem);
+
+$padding-responsive-cta-top-bottom1: clamp(0.2rem, 1vw, 0.6rem);
+$padding-responsive-cta-left-right1: clamp(1.5rem, 1.5vw, 1.5rem);
+
+$height-responsive-cta-icon1: clamp(1rem, 4vw, 2rem);
 
 // -----colors test-----
 
