--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -44,6 +44,8 @@ $font-size-responsive-hero1: clamp(1.2rem, 4vw, 4rem);
 $font-size-responsive-hero2: clamp(0.6rem, 1.5vw, 1.1rem);
 $font-size-responsive-hero3: clamp(0.6rem, 1.5vw, 1.2rem);
 
+$font-size-responsive-row1: clamp(0.8rem, 1.4vw, 2rem);
+
 $font-margin-right-responsive-header1: clamp(10px, 1.3vw, 20px);
 
 // -----Logo-----
