--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -3,6 +3,7 @@
     --items-number: 5;
     --space-between-items: 1rem;
     --slider-index: 0;
+    --slider-controls-width: #{$left-padding-hero1};
     display: flex;
     position: relative;
     z-index: 8;
@@ -10,20 +11,22 @@
     gap: 0.5rem;
     padding: 1rem 0;
     color: white;
-    translate: 0 -10rem;
-    overflow-y: visible;
+    translate: 0 -10vw;
 
     @include tablette-only {
-        --items-number: 4;
+        --items-number: 3;
+        --space-between-items: 0.5rem;
     }
     @include mobile-only {
-        --items-number: 3;
+        --items-number: 2;
+        --space-between-items: 0rem;
+        translate: 0 15vw;
     }
     h2 {
         font-size: $font-size-responsive-row1;
         font-weight: 600;
         opacity: 0.9;
-        padding: 0 4rem;
+        padding: 0 var(--slider-controls-width);
         transition: opacity ease-in-out 150ms;
         cursor: pointer;
         &:hover {
@@ -40,7 +43,7 @@
 
         button {
             position: absolute;
-            width: 4rem;
+            width: var(--slider-controls-width);
             height: 100%;
             z-index: 3;
             &.previous-button {
@@ -58,12 +61,15 @@
         @include from-desktop {
             overflow-x: hidden;
         }
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     &__posters {
         display: flex;
         padding: 0.5rem 0;
         gap: var(--space-between-items);
-        width: calc(100% - 4rem * 2);
+        width: calc(100% - var(--slider-controls-width) * 2);
         translate: calc(((-100% - 2rem / 2)) * var(--slider-index)) 0;
         transition: all 300ms ease-in-out;
 
