--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -78,6 +78,8 @@ $padding-responsive-cta-left-right1: clamp(1.5rem, 1.5vw, 1.5rem);
 
 $height-responsive-cta-icon1: clamp(1rem, 4vw, 2rem);
 
+$left-padding-hero1: 4vw;
+
 // -----colors test-----
 
 $color-test1: red;
