--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -87,12 +87,15 @@
             (100% - (var(--items-number) - 1) * var(--space-between-items)) /
                 var(--items-number)
         );
-        aspect-ratio: 16 / 9;
-        object-fit: contain;
         border-radius: 5px;
         opacity: 0.9;
         transition: transform ease-in-out 150ms;
         position: relative;
         z-index: 2;
+        > img {
+            border-radius: 5px;
+            aspect-ratio: 16 / 9;
+            object-fit: cover;
+        }
     }
 }
